--- a/my.md.html
+++ b/my.md.html
@@ -7,42 +7,42 @@ Ahk
 
 | Normal     | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
 | :--------- | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: |
-|            | Q          | W          | E          | R          | T          |            |            | Y          | U          | I          | O          | P          |
-|            | A          | S          | D          | F          | G          |            |            | H          | J          | K          | L          | :;         |
-|            | Z          | X          | C          | V          | B          |            |            | N          | M          | <,         | >.         | ?/         |
-|            | Tab        | Win        | Alt        | Zen        | Ctrl       | Esc        | Shift      | Space      |            |            |            | Enter      |
+| .          | Q          | W          | E          | R          | T          |            |            | Y          | U          | I          | O          | P          |
+| .          | A          | S          | D          | F          | G          |            |            | H          | J          | K          | L          | :;         |
+| .          | Z          | X          | C          | V          | B          |            |            | N          | M          | <,         | >.         | ?/         |
+| .          | Tab        | Win        | Alt        | Zen        | Ctrl       | Esc        | Shift      | Space      |            |            |            | Enter      |
 | Ctrl       | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-|            |            |            |            |            |            |            |            |            |            |            |            |            |
-|            |            |            |            |            |            |            |            |            |            |            |            |            |
-|            |            |            |            |            |            |            |            |            |            |            |            |            |
+| .          |            |            |            |            |            |            |            |            |            |            |            |            |
+| .          |            |            |            |            |            |            |            |            |            |            |            |            |
+| .          |            |            |            |            |            |            |            |            |            |            |            |            |
 | Space      | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-|            | win_next   | win_prev   |            | app_prev   | app_next   |            |            | C-Home     | C-End      | C-PgUp     | C-PgDn     | PgUp       |
-|            |            |            |            |            | F5         |            |            | PgUp       | C-n        | C-p        | PgDn       | PgDn       |
-|            |            |            | copy       | paste      |            |            |            | Down       | Up         |            |            |            |
+| .          | win_next   | win_prev   |            | app_prev   | app_next   |            |            | C-Home     | C-End      | C-PgUp     | C-PgDn     | PgUp       |
+| .          |            |            |            |            | F5         |            |            | PgUp       | C-n        | C-p        | PgDn       | PgDn       |
+| .          |            |            | copy       | paste      |            |            |            | Down       | Up         |            |            |            |
 | Unused     | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-|            | [q]        |            |            |            |            |            |            |            |            |            |            |            |
-|            |            |            |            |            |            |            |            |            |            |            |            |            |
-|            |            |            |            |            |            |            |            |            |            |            |            |            |
+| .          | [q]        |            |            |            |            |            |            |            |            |            |            |            |
+| .          |            |            |            |            |            |            |            |            |            |            |            |            |
+| .          |            |            |            |            |            |            |            |            |            |            |            |            |
 | Special    | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-|            |            |            |            | !          | @          |            |            | ^          | '$'        | (          | )          | ~          |
-|            | [a]        |            |            | `          |            |            |            | '          | "          | {          | }          | Bar        |
-|            |            |            |            | #          | %          |            |            | &          | _          | [          | ]          | \          |
+| .          |            |            |            | !          | @          |            |            | ^          | '$'        | (          | )          | ~          |
+| .          | [a]        |            |            | `          |            |            |            | '          | "          | {          | }          | Bar        |
+| .          |            |            |            | #          | %          |            |            | &          | _          | [          | ]          | \          |
 | Number     | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-|            |            | 7          | 8          | 9          |            |            |            | +          | /          | (          | )          | BS         |
-|            |            | 4          | 5          | 6          |            |            |            | -          | *          | {          | }          | f          |
-|            | [z]        | 1          | 2          | 3          | 0          |            |            | =          |            | ,          | .          | l          |
+| .          |            | 7          | 8          | 9          |            |            |            | +          | /          | (          | )          | BS         |
+| .          |            | 4          | 5          | 6          |            |            |            | -          | *          | {          | }          | f          |
+| .          | [z]        | 1          | 2          | 3          | 0          |            |            | =          |            | ,          | .          | l          |
 | Windows    | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-|            |            |            |            | reload_ahk |            |            |            | W-Left     | W-Up       | W-Right    | toggle_win | [p]        |
-|            |            | W-s        | W-d        |            | W-g        |            |            |            |            |            |            |            |
-|            |            |            |            |            |            |            |            |            |            |            |            |            |
+| .          |            |            |            | reload_ahk |            |            |            | W-Left     | W-Up       | W-Right    | toggle_win | [p]        |
+| .          |            | W-s        | W-d        |            | W-g        |            |            |            |            |            |            |            |
+| .          |            |            |            |            |            |            |            |            |            |            |            |            |
 | Edit       | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-|            | Esc        | Tab        |            |            |            |            |            | Home       | End        | PgUp       | PgDn       |            |
-|            | Home       | BS         | Left       | Right      | End        |            |            | Left       | Down       | Up         | Right      | [;]        |
-|            | Ins        | Del        | Zen        |            |            |            |            |            |            |            |            |            |
+| .          | Esc        | Tab        |            |            |            |            |            | Home       | End        | PgUp       | PgDn       |            |
+| .          | Home       | BS         | Left       | Right      | End        |            |            | Left       | Down       | Up         | Right      | [;]        |
+| .          | Ins        | Del        | Zen        |            |            |            |            |            |            |            |            |            |
 | Func       | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-|            |            | F7         | F8         | F9         | F12        |            |            |            |            |            |            |            |
-|            |            | F4         | F5         | F6         | F11        |            |            |            |            |            |            |            |
-|            |            | F1         | F2         | F3         | F10        |            |            |            |            |            |            | [/]        |
+| .          |            | F7         | F8         | F9         | F12        |            |            |            |            |            |            |            |
+| .          |            | F4         | F5         | F6         | F11        |            |            |            |            |            |            |            |
+| .          |            | F1         | F2         | F3         | F10        |            |            |            |            |            |            | [/]        |
 | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx |
 
 <textarea id="typing_area" name="typing_area" rows="10" cols="80">
