--- a/my.md.html
+++ b/my.md.html
@@ -12,11 +12,11 @@ Ahk
 | .          | Z          | X          | C          | V          | B          |            |            | N          | M          | <,         | >.         | ?/         |
 | .          | Tab        | Win        | Alt        | Zen        | Ctrl       | Esc        | Shift      | Space      |            |            |            | Enter      |
 | Ctrl       | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          |            |            |            |            |            |            |            |            |            |            |            |            |
-| .          |            |            |            |            |            |            |            |            |            |            |            |            |
-| .          |            |            |            |            |            |            |            |            |            |            |            |            |
+| .          | macro_q    | [win cmd]  | win close  | [redo]     | tag_prev   |            |            | yank       | wbl_open   | [Tab]      | wbl_pop    | half prev  |
+| .          | quickhl    | rg_cword   | page prev  | page next  | redraw     |            |            | win left   | win next   | win prev   | win right  |            |
+| .          | wrap       | cut        | ez_motion  | [v_block]  | rg_cfile   |            |            | half next  | [Enter]    |            |            |            |
 | Space      | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          | win_next   | win_prev   |            | app_prev   | app_next   |            |            | C-Home     | C-End      | C-PgUp     | C-PgDn     | PgUp       |
+| .          | win next   | win prev   |            | app prev   | app next   |            |            | C-Home     | C-End      | C-PgUp     | C-PgDn     | PgUp       |
 | .          |            |            |            |            | F5         |            |            | PgUp       | C-n        | C-p        | PgDn       | PgDn       |
 | .          |            |            | copy       | paste      |            |            |            | Down       | Up         |            |            |            |
 | Unused     | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
