--- a/my.md.html
+++ b/my.md.html
@@ -16,7 +16,7 @@ Ahk
 | .          | quickhl    | rg_cword   | page prev  | page next  | redraw     |            |            | win left   | win next   | win prev   | win right  |            |
 | .          | wrap       | cut        | ez_motion  | [v_block]  | rg_cfile   |            |            | half next  | [Enter]    |            |            |            |
 | Space      | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          | win next   | win prev   |            | app prev   | app next   |            |            | C-Home     | C-End      | C-PgUp     | C-PgDn     | PgUp       |
+| .          |            | win next   | win prev   | app prev   | app next   |            |            | C-Left     | C-Right    | C-Up       | C-Down     | PgUp       |
 | .          |            |            |            |            | F5         |            |            | PgUp       | C-n        | C-p        | PgDn       | PgDn       |
 | .          |            |            | copy       | paste      |            |            |            | Down       | Up         |            |            |            |
 | Unused     | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
