--- a/my.md.html
+++ b/my.md.html
@@ -32,7 +32,7 @@ Ahk
 | .          |            | 4          | 5          | 6          |            |            |            | -          | *          | {          | }          | f          |
 | .          | [z]        | 1          | 2          | 3          | 0          |            |            | =          |            | ,          | .          | l          |
 | Windows    | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          |            |            |            | reload_ahk |            |            |            | W-Left     | W-Up       | W-Right    | toggle_win | [p]        |
+| .          |            |            |            | reload_ahk |            |            |            | toggle_win | W-Left     | W-Up       | W-Right    | [p]        |
 | .          |            | W-s        | W-d        |            | W-g        |            |            |            |            |            |            |            |
 | .          |            |            |            |            |            |            |            |            |            |            |            |            |
 | Edit       | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
