--- a/my.md.html
+++ b/my.md.html
@@ -5,45 +5,41 @@
 Ahk
 =======================================================
 
-| Normal     | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| :--------- | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: |
-| .          | Q          | W          | E          | R          | T          |            |            | Y          | U          | I          | O          | P          |
-| .          | A          | S          | D          | F          | G          |            |            | H          | J          | K          | L          | :;         |
-| .          | Z          | X          | C          | V          | B          |            |            | N          | M          | <,         | >.         | ?/         |
-| .          | Tab        | Win        | Alt        | Zen        | Ctrl       | Esc        | Shift      | Space      |            |            |            | Enter      |
-| Ctrl       | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          | macro_q    | [win cmd]  | win close  | [redo]     | tag_prev   |            |            | yank       | wbl_open   | [Tab]      | wbl_pop    | half prev  |
-| .          | quickhl    | rg_cword   | page prev  | page next  | redraw     |            |            | win left   | win next   | win prev   | win right  |            |
-| .          | wrap       | cut        | ez_motion  | [v_block]  | rg_cfile   |            |            | half next  | [Enter]    |            |            |            |
-| Space      | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          |            | win next   | win prev   | app prev   | app next   |            |            | C-Left     | C-Right    | C-Up       | C-Down     | PgUp       |
-| .          |            |            |            |            | F5         |            |            | PgUp       | C-n        | C-p        | PgDn       | PgDn       |
-| .          |            |            | copy       | paste      |            |            |            | Down       | Up         |            |            |            |
-| Unused     | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          | [q]        |            |            |            |            |            |            |            |            |            |            |            |
-| .          |            |            |            |            |            |            |            |            |            |            |            |            |
-| .          |            |            |            |            |            |            |            |            |            |            |            |            |
-| Special    | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          |            |            |            | !          | @          |            |            | ^          | '$'        | (          | )          | ~          |
-| .          | [a]        |            |            | `          |            |            |            | '          | "          | {          | }          | Bar        |
-| .          |            |            |            | #          | %          |            |            | &          | _          | [          | ]          | \          |
-| Number     | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          |            | 7          | 8          | 9          |            |            |            | +          | /          | (          | )          | BS         |
-| .          |            | 4          | 5          | 6          |            |            |            | -          | *          | {          | }          | f          |
-| .          | [z]        | 1          | 2          | 3          | 0          |            |            | =          |            | ,          | .          | l          |
-| Windows    | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          |            |            |            | reload_ahk |            |            |            | toggle_win | W-Left     | W-Up       | W-Right    | [p]        |
-| .          |            | W-s        | W-d        |            | W-g        |            |            |            |            |            |            |            |
-| .          |            |            |            |            |            |            |            |            |            |            |            |            |
-| Edit       | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          | Esc        | Tab        |            |            |            |            |            | Home       | End        | PgUp       | PgDn       |            |
-| .          | Home       | BS         | Left       | Right      | End        |            |            | Left       | Down       | Up         | Right      | [;]        |
-| .          | Ins        | Del        | Zen        |            |            |            |            |            |            |            |            |            |
-| Func       | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| .          |            | F7         | F8         | F9         | F12        |            |            |            |            |            |            |            |
-| .          |            | F4         | F5         | F6         | F11        |            |            |            |            |            |            |            |
-| .          |            | F1         | F2         | F3         | F10        |            |            |            |            |            |            | [/]        |
-| xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx |
+| --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
+| :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: |
+| .          | Q          | W          | E          | R          | T          |            |            | Y          | U          | I          | O          | P          |            |
+| .          | A          | S          | D          | F          | G          |            |            | H          | J          | K          | L          | :;         |            |
+| .          | Z          | X          | C          | V          | B          |            |            | N          | M          | <,         | >.         | ?/         |            |
+| .          | Tab        | Win        | Alt        | Zen        | Ctrl       | Esc        | Shift      | Space      |            |            |            | Enter      |            |
+| --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
+| .          | macro_q    | [win cmd]  | win close  | [redo]     | tag prev   |            |            | yank       | wbl_open   | [Tab]      | wbl_pop    | half prev  |            |
+| [Ctrl]     | quickhl    | rg_cword   | page prev  | page next  | redraw     |            |            | win left   | win next   | win prev   | win right  |            |            |
+| .          | wrap       | cut        | ez_motion  | [v_block]  | rg_cfile   |            |            | half next  | [Enter]    |            |            |            |            |
+| --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
+| .          | win next   | win prev   | app prev   | app next   | F5         |            |            | C-Left     | C-Right    | C-Up       | C-Down     | Esc        |            |
+| .          | Home       | BS         | Left       | Right      | End        |            |            | PgUp       | C-n        | C-p        | PgDn       |            |            |
+| .          | Ins        | Del        | copy       | paste      |            |            | [Space]    | Down       | Up         | reload_ahk | susp_ahk   | A-/        |            |
+| --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
+| [Tab]      | win next   | win prev   | app prev   | app next   | F5         |            |            |            |            | (          | )          | W-Left     |            |
+| .          |            | W-s        | W-d        |            | W-g        |            |            |            |            | {          | }          | W-Up       |            |
+| .          |            |            |            |            |            |            |            |            |            | [          | ]          | W-Right    |            |
+| --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
+| .          |            | F7         | F8         | F9         | F12        |            |            |            |            |            |            |            | [BS]       |
+| .          |            | F4         | F5         | F6         | F11        |            |            |            |            |            |            |            |            |
+| .          |            | F1         | F2         | F3         | F10        |            |            |            |            |            |            |            |            |
+| --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
+| .          | !          | @          | ^          | '$'        | %          |            |            |            |            |            |            |            |            |
+| .          | #          | ~          | "          | '          | `          |            |            |            |            |            |            |            | [Enter]    |
+| .          | /          | \          | &          | Bar        | _          |            |            |            |            |            |            |            |            |
+| --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
+| .          | +          | 7          | 8          | 9          | /          |            |            |            |            |            |            |            |            |
+| .          | -          | 4          | 5          | 6          | *          |            |            |            |            |            |            |            |            |
+| .          | 0          | 1          | 2          | 3          | =          |            |            |            |            |            |            |            | [RShift]   |
+| --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
+| .          |            |            |            |            |            |            |            |            |            |            |            |            |            |
+| .          |            |            |            |            |            |            |            |            |            |            |            |            |            |
+| .          |            |            |            |            |            |            |            |            |            |            |            |            |            |
+| xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx |
 
 <textarea id="typing_area" name="typing_area" rows="10" cols="80">
 This is a typing area.
