--- a/my.md.html
+++ b/my.md.html
@@ -12,17 +12,17 @@ Ahk
 | .          | Z          | X          | C          | V          | B          |            |            | N          | M          | <,         | >.         | ?/         |            |
 | .          | Tab        | Win        | Alt        | Zen        | Ctrl       | Esc        | Shift      | Space      |            |            |            | Enter      |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
-| .          | macro_q    | [win cmd]  | win close  | [redo]     | tag prev   |            |            | yank       | wbl_open   | [Tab]      | wbl_pop    | half prev  |            |
+| .          | macro_q    | [win cmd]  | win close  | [redo]     | tag prev   |            |            | ez_motion  | wbl_open   | [Tab]      | wbl_pop    | half prev  |            |
 | [Ctrl]     | quickhl    | rg_cword   | page prev  | page next  | redraw     |            |            | win left   | win next   | win prev   | win right  |            |            |
-| .          | wrap       | cut        | ez_motion  | [v_block]  | rg_cfile   |            |            | half next  | [Enter]    |            |            |            |            |
+| .          | wrap       | cut_m      | copy_m     | [v_block]  | rg_cfile   |            |            | half next  | [Enter]    |            |            |            |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
-| .          | win next   | win prev   | app prev   | app next   | F5         |            |            | C-Left     | C-Right    | C-Up       | C-Down     | Esc        |            |
+| .          | win next   | win prev   | app prev   | app next   | app tab    |            |            | C-Left     | C-Right    | C-Up       | C-Down     | Esc        |            |
 | .          | Home       | BS         | Left       | Right      | End        |            |            | PgUp       | C-n        | C-p        | PgDn       |            |            |
-| .          | Ins        | Del        | copy       | paste      |            |            | [Space]    | Down       | Up         | reload_ahk | susp_ahk   | A-/        |            |
+| .          | Ins        | Del        | app copy   | app paste  |            |            | [Space]    | Down       | Up         | reload_ahk | susp_ahk   | A-/        |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
-| [Tab]      | win next   | win prev   | app prev   | app next   | F5         |            |            |            |            | (          | )          | W-Left     |            |
-| .          |            | W-s        | W-d        |            | W-g        |            |            |            |            | {          | }          | W-Up       |            |
-| .          |            |            |            |            |            |            |            |            |            | [          | ]          | W-Right    |            |
+| [Tab]      | win next   | win prev   | app prev   | app next   |            |            |            |            | ()         | (          | )          |            |            |
+| .          |            | W-s        | W-d        |            | W-g        |            |            |            | {}         | {          | }          |            |            |
+| .          | W-Left     | W-Up       | W-Right    |            |            |            |            |            | []         | [          | ]          |            |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | .          |            | F7         | F8         | F9         | F12        |            |            |            |            |            |            |            | [BS]       |
 | .          |            | F4         | F5         | F6         | F11        |            |            |            |            |            |            |            |            |
@@ -30,11 +30,11 @@ Ahk
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | .          | !          | @          | ^          | '$'        | %          |            |            |            |            |            |            |            |            |
 | .          | #          | ~          | "          | '          | `          |            |            |            |            |            |            |            | [Enter]    |
-| .          | /          | \          | &          | Bar        | _          |            |            |            |            |            |            |            |            |
+| .          | _          | \          | Bar        | /          | &          |            |            |            |            |            |            | BS         |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | .          | +          | 7          | 8          | 9          | /          |            |            |            |            |            |            |            |            |
 | .          | -          | 4          | 5          | 6          | *          |            |            |            |            |            |            |            |            |
-| .          | 0          | 1          | 2          | 3          | =          |            |            |            |            |            |            |            | [RShift]   |
+| .          | 0          | 1          | 2          | 3          | =          |            |            |            |            | ,          | .          | BS         | [RShift]   |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | .          |            |            |            |            |            |            |            |            |            |            |            |            |            |
 | .          |            |            |            |            |            |            |            |            |            |            |            |            |            |
