--- a/my.md.html
+++ b/my.md.html
@@ -20,13 +20,13 @@ Ahk
 | .          | Home       | BS         | Left       | Right      | End        |            |            | PgUp       | C-n        | C-p        | PgDn       |            |            |
 | .          | Ins        | Del        | app copy   | app paste  |            |            | [Space]    | Down       | Up         | reload_ahk | susp_ahk   | A-/        |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
-| [Tab]      | win next   | win prev   | app prev   | app next   |            |            |            |            | ()         | (          | )          |            |            |
-| .          |            | W-s        | W-d        |            | W-g        |            |            |            | {}         | {          | }          |            |            |
-| .          | W-Left     | W-Up       | W-Right    |            |            |            |            |            | []         | [          | ]          |            |            |
+| [Tab]      | win next   | win prev   | app prev   | app next   | app tab    |            |            |            | F7         | F8         | F9         | F12        |            |
+| .          | quake mode | W-s        | W-d        |            | W-g        |            |            |            | F4         | F5         | F6         | F11        |            |
+| .          | W-Left     | W-Up       | W-Right    |            |            |            |            |            | F1         | F2         | F3         | F10        |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
-| .          |            | F7         | F8         | F9         | F12        |            |            |            |            |            |            |            | [BS]       |
-| .          |            | F4         | F5         | F6         | F11        |            |            |            |            |            |            |            |            |
-| .          |            | F1         | F2         | F3         | F10        |            |            |            |            |            |            |            |            |
+| .          | ()         | (          | )          |            |            |            |            |            |            |            |            |            | [BS]       |
+| .          | {}         | {          | }          |            |            |            |            |            |            |            |            |            |            |
+| .          | []         | [          | ]          |            |            |            |            |            |            |            |            |            |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | .          | !          | @          | ^          | '$'        | %          |            |            |            |            |            |            |            |            |
 | .          | #          | ~          | "          | '          | `          |            |            |            |            |            |            |            | [Enter]    |
