--- a/my.md.html
+++ b/my.md.html
@@ -28,9 +28,9 @@ Ahk
 | .          | {}         | {          | }          |            |            |            |            |            |            |            |            |            |            |
 | .          | []         | [          | ]          |            |            |            |            |            |            |            |            |            |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
-| .          | !          | @          | ^          | '$'        | %          |            |            |            |            |            |            |            |            |
-| .          | #          | ~          | "          | '          | `          |            |            |            |            |            |            |            | [Enter]    |
-| .          | _          | \          | Bar        | /          | &          |            |            |            |            |            |            | BS         |            |
+| .          | !          | @          | ^          | '$'        | %          |            |            |            | ()         | (          | )          |            |            |
+| .          | #          | ~          | "          | '          | `          |            |            |            | {}         | {          | }          |            | [Enter]    |
+| .          | _          | \          | Bar        | /          | &          |            |            |            | []         | [          | ]          | BS         |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | .          | +          | 7          | 8          | 9          | /          |            |            |            |            |            |            |            |            |
 | .          | -          | 4          | 5          | 6          | *          |            |            |            |            |            |            |            |            |
