--- a/my.md.html
+++ b/my.md.html
@@ -255,6 +255,9 @@ Keymap
 *
 ***********************************************************************
 
+- [遊舎工房 Keyball39](https://shop.yushakobo.jp/products/5357)
+- [Build Guide for Keyball39](https://github.com/Yowkees/keyball/blob/main/keyball39/doc/rev1/buildguide_jp.md)
+
 Vim next/prev
 =======================================================
 | Mode         | Key | Description  |
