--- a/sh.md.html
+++ b/sh.md.html
@@ -320,6 +320,13 @@ env LC_TIME=C date '+%H:%M:%S'
 | unzip filename.zip         | uncompress files |
 | unzip -l filename.zip      | list files       |
 
+<meta name="keywords" content="*memo:sh.lha*">
+## lha
+| Command         | Description |
+| ---             | ---         |
+| lha -l file.lzh | list        |
+| lha -x file.lzh | extract     |
+
 <meta name="keywords" content="*memo:sh.tar*">
 ## tar
 | Command                              | Description           |
